--- a/lounge.css
+++ b/lounge.css
@@ -1,19 +1,19 @@
 body {
-  font-size:           small;
-  font-family:         Verdana, Helvetica, Arial, sans-serif;
-  line-height:         1.6em;
+  font-size: small;
+  font-family: Verdana, Helvetica, Arial, sans-serif;
+  line-height: 1.6em;
 }
 
 h1, h2 {
-  color:               #007e7e;
+  color: #007e7e;
 }
 
 h1 {
-  font-size:           150%;
+  font-size: 150%;
 }
 
 h2 {
-  font-size:           130%;
+  font-size: 130%;
 }
 .guarantee {
   line-height: 1.9em;
@@ -31,4 +31,33 @@ h2 {
   background-image: url(images/background.gif);
   background-repeat: no-repeat;
   background-position: top left;
+}
+#elixirs {
+  border-width: thin;
+  border-style: solid;
+  border-color: #007e7e;
+  width: 200px;
+
+  padding-right: 20px;
+  padding-bottom: 20px;
+  padding-left: 20px;
+
+  margin-left: 20px;
+
+  text-align: center;
+
+  background-image: url(images/cocktail.gif);
+  background-repeat: repeat-x;
+}
+div h2 {
+  color: black;
+}
+#elixirs h2 {
+  color: black;
+}
+#elixirs h3 {
+  color: #d12c47;
+}
+#elixirs {
+  line-height: 1;
 }
